--- a/web/src/pages/plan/results.astro
+++ b/web/src/pages/plan/results.astro
@@ -51,7 +51,7 @@ import BaseLayout from "../../layouts/BaseLayout.astro";
           </div>
           <div style="display:flex;gap:var(--space-3);flex-wrap:wrap;">
             <a class="button" href="/recipes">View recipes</a>
-            <a class="button button--primary" href="/admin/recipes/new">Generate recipe</a>
+            <a class="button button--primary" href="/recipes/new">Generate recipe</a>
           </div>
         </div>
       </div>
