--- a/web/src/pages/recipes/index.astro
+++ b/web/src/pages/recipes/index.astro
@@ -6,7 +6,7 @@ import BaseLayout from "../../layouts/BaseLayout.astro";
   <div class="page-header reveal">
     <div class="page-header__top">
       <p class="section-label">Meal Library</p>
-      <a class="button button--primary" href="/admin/recipes/new">+ Generate Recipe</a>
+      <a class="button button--primary" href="/recipes/new">+ Generate Recipe</a>
     </div>
     <h1 class="section-headline">Recipes</h1>
     <p class="page-sub">Generated recipes pulled from the live database.</p>
